Prevent stand-alone elements from jumping on vh change
When hiding/revealing the browser chrome on mobile browsers, the
viewport height changes. Use `lvh` unit when supported to prevent
stand-alone elements from jumping to an updated position.

Upgrade `postcss-calc` to prevent "Unrecognized text" error.

REDMINE-20192

--- a/entry_types/scrolled/package/src/frontend/ContentElementScrollSpace.module.css
+++ b/entry_types/scrolled/package/src/frontend/ContentElementScrollSpace.module.css
@@ -6,3 +6,13 @@
   position: sticky;
   top: calc(50% - var(--height) * 1px);
 }
+
+@supports (height: 100lvh) {
+  .wrapper {
+    height: 130lvh;
+  }
+
+  .inner {
+    top: calc(50lvh - var(--height) * 1px);
+  }
+}
